# desctop_ui_correct

./: CMakeLists.txt  check_fields.cpp  check_fields.h  customshadoweffect.cpp  customshadoweffect.h  file_page.cpp  file_page.h  home_page.cpp  home_page.h  in_page.cpp  in_page.h  main.cpp  mainwindow.cpp  mainwindow.h  reg_page.cpp  reg_page.h  round_graph.cpp  round_graph.h
